fixed Futura font (except on firefox)

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -7,7 +7,7 @@
 // Local fonts (uncomment following lines)
 @font-face {
   font-family: "Futura";
-     src:     font-url('Futura.ttf') format('truetype')
+     src:     font-url('Futura.ttc') format('truetype')
 }
 $beach-buddy-font: "Futura";
 
